--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,23 +21,21 @@
         For more information, see https://support.google.com/admob/answer/3052638
     <!- -->
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
-    <!-- -
-        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
-        For more information, see https://support.google.com/admob/answer/3052638
-    <!- -->
     <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
-
     <string name="title_activity_ads_interstial">AdsInterstialActivity</string>
     <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
     <string name="start_level">Advertise Google Play</string>
 
     <string name="game_over">Если у вас закончились жизни, их можно <b>восстановить посмотрев рекламу</b>, или они восстановятся сами в течении одного дня.</string>
     <string name="your_lives">У вас <b>0</b> жизней.</string>
-
     <string name="close">Закрыть</string>
     <string name="restore">Восстановить</string>
 
     <string name="yes">Да</string>
     <string name="no">Нет</string>
     <string name="exit">Выйти из игры?</string>
+
+    <string name="start">Начать игру</string>
+    <string name="your_name">Ваше имя:</string>
+    <string name="your_place">Вы находитесь на %1$d месте</string>
 </resources>
